--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "@react-three/drei": "^9.110.0",
     "@react-three/fiber": "^8.17.5",
     "@react-three/postprocessing": "^2.16.2",
-
     "lamina": "^1.1.23",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "three-stdlib": "^2.32.2"
   },
   "devDependencies": {
-    "@types/three": "^0.167.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/three": "^0.167.1"
   },
   "scripts": {
     "start": "react-scripts start",
